--- a/index.html
+++ b/index.html
@@ -9,20 +9,32 @@
 </head>
 <body>
 
-  <h2>Dung Beetle</h2>
+  <a class="link-card" href="">
+    <h2>Dung Beetle</h2>
 
-  <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
-  <p>----------------</p>
-  <dl>
-    <dt>Kingdom:</dt><dd>Animalia</dd>
-  Phylum: Arthropoda
-  Class: Insecta
-  Order: Coleoptera
-  Suborder: Polyphaga
-  Superfamily: Scarabaeoidea
-  Family: Scarabidae</p>
-  </dl>
-
-
+      <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
+      <hr>
+      <div class="list">
+      <dl>
+        <dt>Kingdom:</dt>
+        <dd>Animalia</dd>
+        <dt>Phylum:</dt>
+        <dd>Arthropoda</dd>
+        <dt>Class:</dt>
+        <dd>Insecta</dd>
+        <dt>Order:</dt>
+        <dd>Coleoptera</dd>
+        <dt>Suborder:</dt>
+        <dd>Polyphaga</dd>
+        <dt>Superfamily:</dt>
+        <dd>Scarabaeoidea</dd>
+        <dt>Family:</dt>
+        <dd>Scarabidae</dd>
+        </dl>
+      </div>
+        <div class="btn-wrap">
+      <span class="btn">Learn more ...</span>
+    </div>
+  </a>
 </body>
 </html>
