--- a/index.html
+++ b/index.html
@@ -12,27 +12,28 @@
   <a class="link-card" href="">
     <h2>Dung Beetle</h2>
 
-      <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
-      <hr>
-      <div class="list">
+    <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
+
+    <div class="list">
       <dl>
-        <dt>Kingdom:</dt>
+        <dt>Kingdom</dt>
         <dd>Animalia</dd>
-        <dt>Phylum:</dt>
+        <dt>Phylum</dt>
         <dd>Arthropoda</dd>
-        <dt>Class:</dt>
+        <dt>Class</dt>
         <dd>Insecta</dd>
-        <dt>Order:</dt>
+        <dt>Order</dt>
         <dd>Coleoptera</dd>
-        <dt>Suborder:</dt>
+        <dt>Suborder</dt>
         <dd>Polyphaga</dd>
-        <dt>Superfamily:</dt>
+        <dt>Superfamily</dt>
         <dd>Scarabaeoidea</dd>
-        <dt>Family:</dt>
+        <dt>Family</dt>
         <dd>Scarabidae</dd>
-        </dl>
-      </div>
-        <div class="btn-wrap">
+      </dl>
+    </div>
+
+    <div class="btn-wrap">
       <span class="btn">Learn more ...</span>
     </div>
   </a>
